# tjh-knowledge-base

./: .gitignore  404.html  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
assets/stylesheets/: main.046329b4.min.css
basic_principle_of_programming/: index.html
blog/: blog_index.html  index.html
blog/blog_index/: index.html
cicd/: index.html
config/uk/: mkdocs.yml
database/: index.html
docs/: basic_principle_of_programming.md  cicd.md  database.md  general_questions.md  git.md  index.md  java.md  javascript.md  python.md  qa_automation.md  qa_manual.md  testing_theory.md  typescript.md
docs/gitflow/: GITFLOW.md
docs/interview_questions/: basic_principle_of_programming.md  cicd.md  database.md  general_questions.md  git.md  java.md  javascript.md  python.md  qa_manual_qa_automation.md  typescript.md
docs/telegram_bot/: tjh_parser_bot.md
general_questions/: index.html
git/: index.html
gitflow/: GITFLOW.html
gitflow/GITFLOW/: index.html
interview_questions/: basic_principle_of_programming.html  cicd.html  database.html  general_questions.html  git.html  java.html  javascript.html  python.html  qa_manual_qa_automation.html  typescript.html
interview_questions/basic_principle_of_programming/: index.html
java/: index.html
javascript/: index.html
python/: index.html
qa_automation/: index.html
qa_manual/: index.html
search/: search_index.js  search_index.json
site/: 404.html  index.html  search.html  sitemap.xml
stylesheets/: extra.css
telegram_bot/: tjh_parser_bot.html
testing_theory/: index.html
typescript/: index.html
(+10 files in other folders)
