[tool.poetry]
name = "tjh-site-documentation"
version = "0.1.0"
description = ""
authors = ["Dima Meyta <mejta.diman@gmail.com>"]
readme = "README.md"
packages = [{include = "tjh_site_documentation"}]

[tool.poetry.dependencies]
python = "^3.11"
pymdown-extensions = "^10.3"
mkdocs-minify-plugin = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
